<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wiloc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_scan">start Scan</string>
    <string name="stop_scan">stop scan</string>
    <string name="rssiText">rssiText</string>
    <string name="start_connect">Connect</string>
    <string name="stop_connect">Disconnect</string>
    <string name="zmq_status">ZMQ status</string>
    <string name="data_trans">Publish data on Phone</string>
    <string name="scan_wifi">Scan WiFi</string>
    <string name="internal_sensor">Internal Sensor</string>
    <string name="BT_sensor">BT sensor</string>
    <string name="server_mode">Data collection mode</string>
    <string name="RadioBTN1">Phone as server</string>
    <string name="RadioBTN2">PC as server</string>
    <string name="ip_of_server">IP of server</string>
    <string name="submit">submit </string>
    <string name="zmqPusher_switch">Push msg to server</string>
    <string name="WiFiResult_str">WiFi</string>
    <string name="PhoneStatus_str">Phone:</string>
    <string name="BTStatus_str">BT:</string>
    <string name="search_button">Search</string>
    <string name="button_connect">Connect</string>
    <string name="publish_on_phone">Publish on Phone</string>
    <string name="push_to_server">Push to server</string>

</resources>
