
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_of_server" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IP: " />

            <EditText
                android:id="@+id/Edit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/MovileLabel"
                android:layout_alignParentRight="true"
                android:height="9dp"
                android:width="200dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Port:" />

            <EditText
                android:id="@+id/Edit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/MovileLabel"
                android:layout_alignParentRight="true"
                android:height="9dp"
                android:width="150dp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MobileID" />

            <EditText
                android:id="@+id/Edit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/MovileLabel"
                android:layout_alignParentRight="true"
                android:height="9dp"
                android:width="150dp" />
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        <CheckBox
            android:id="@+id/cb_push_to_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"            
            android:text="@string/push_to_server" />

        <CheckBox
            android:id="@+id/cb_publish_on_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/publish_on_phone" />
        </LinearLayout>



        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:onClick="onZmqSWClicked"
            android:text="@string/data_trans" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:onClick="onWiFiSWClicked"
            android:text="@string/scan_wifi" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:onClick="onInternalSensorSWClicked"
            android:text="@string/internal_sensor" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBTSWClicked"
            android:text="@string/BT_sensor" />
    </LinearLayout>

    <TextView
        android:id="@+id/WiFiResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WiFiResult_str" />

    <TextView
        android:id="@+id/PhoneStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PhoneStatus_str" />

    <TextView
        android:id="@+id/BTStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTStatus_str" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    <Button
        android:id="@+id/fall_forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="前摔" 
        android:onClick="onFallForwardBtn"/>

    <Button
        android:id="@+id/fall_backward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="后摔" />

    <Button
        android:id="@+id/no_fall_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="不摔" />
    </LinearLayout>

    <Switch
        android:id="@+id/fall_detection_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="开始检测" />

    <TextView
        android:id="@+id/fall_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="摔倒状态" />

    <TextView
        android:id="@+id/fall_cnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="库存状况" />

</LinearLayout>